--- a/css/style.css
+++ b/css/style.css
@@ -1,124 +1,171 @@
 body {
-	background-color: #e4e8e6;
+    background-color: #e4e8e6;
     font-family: "Karla", sans-serif;
+    font-size: 16px;
 }
 
 figure {
-	display: block;
-	margin: 0;
+    display: block;
+    margin: 0;
 }
 
 
 img {
-	max-width: 100%;
-	max-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 ul {
 	padding: 0;
-	list-style: none;
-	font-family: 'oswald';
-	font-color: #F0F5BB;
+    list-style: none;
 }
 
-.pagelink {
-	color: #754F45;
-	    transition: all 0.2s;
+a {
+    color: #754F45;
+    transition: all 0.2s;
+    text-decoration: none;
 }
 
-.pagelink:hover {
-	color: #F5C664;
-		text-decoration: none;
+a:hover {
+    color: #F5C664;
+    text-decoration: none;
 }
+
 
 .wrapper {
-	display: grid;
-	max-width: 80%;
-	grid-gap: 2em;
-	grid-template-rows: 0.4fr 0.4fr 3fr 1fr;
-	grid-template-columns: 1fr 1fr 1fr;
-	background-color: transparent;
-	color: #1f2220;
-	width: 80%;
-	margin: 0 10%;
-	justify-content: center;
-	text-align: center;
-	padding-top: 45px;
+    display: grid;
+    max-width: 80%;
+    grid-gap: 2em;
+    grid-template-rows: 0.1fr 0.3fr 3fr 0.05fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: transparent;
+    color: #1f2220;
+    width: 80%;
+    height: auto;
+    margin: 0 10%;
+    justify-content: center;
+    text-align: center;
+    padding-top: 45px;
 }
 
 .header {
-	grid-column: 1/2;
-	grid-row: 1/3;
-	justify-content: center;
-	align-self: center;
-	padding: 5% 0 0 0;
+    grid-column: 1/2;
+    grid-row: 1/3;
+    justify-content: center;
+    align-self: center;
+    padding: 5% 0 0 0;
 }
 
 
 .navbar-pages {
-	grid-column: 2/4;
-	grid-row: 2/3;
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-
+    grid-column: 2/4;
+    grid-row: 2/3;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-family: 'oswald';
+    font-color: #F0F5BB;
+        list-style: none;
 }
 
 .pagebutt {
-	margin: 0 30px;
-	padding-bottom: 10px;
+    margin: 0 30px;
+    padding-bottom: 10px;
 }
 
 .portfolio {
-	grid-column: 1/4;
-	grid-row: 3/4;
-	display: grid;
-	grid-row-gap: 5em;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-row-columns: 1fr 1fr 1fr;
+    grid-column: 1/4;
+    grid-row: 3/4;
+    display: grid;
+    grid-row-gap: 5em;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row-columns: 1fr 1fr 1fr;
+    justify-content: space-evenly;
+    justify-items: center;
+}
 
+.footer {
+	grid-column: 1/4;
+	grid-row: 4/5;
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
+	justify-content: center;
+	align-items: center;
+	height: 100px;
+}
+
+.footer-bar {
+	grid-row: 1/2;
+	grid-column: 2/3;
+	display: flex;
+	align-self: center;
+	justify-content: center;
+	
+}
+
+.fa-stack {
+	justify-content: center;
+}
+
+.copyright {
+	grid-row: 2/3;
+	grid-column: 2/3;
+	justify-content: center;
 }
 
 .resumeview {
-	grid-column: 1/4;
-	grid-row: 3/4;
+    grid-column: 1/4;
+    grid-row: 3/4;
 }
 
 .worksamples {
-	display: block;
+    display: block;
+    position: relative;
+    width: 350px;
+    height: 350px;
+    align-self: center;
 }
 
-.work-preview {
-	float: center;
-	width: 350px;
-	height: 350px;
-	object-fit: cover;
-	margin: 0;
+.work-preview-l {
+    position: relative;
+    height: 100%;
+    width: auto;
+    object-fit: cover;
+}
+
+.work-preview-p {
 	position: relative;
-
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 
-.work-preview img.landscape{
-	display: block;
-	position: absolute;
-
+.work-description {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  transform: translate(-10%, -10%);
+  -ms-transform: translate(-10%, -10%);
+    text-align: justify;
+    text-justify: inter-word;
+    margin: 5% 5%;
+	color: white;
+}
+.worksamples:hover {
+  background: #754F45
+}
+.worksamples:hover .work-preview-p, 
+.worksamples:hover .work-preview-l{
+  background: #754F45;
+  opacity: 0.1;
 }
 
-.work-preview img.portrait {
-	width: 100%;
-	height: auto;
+.worksamples:hover .work-description {
+  opacity: 1;
 }
-
-.worksamples figcaption {
-	display: block;
-    position: absolute;
-    top: 100%;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    padding: 1em;
-    }
-
 
 
 h1 {
@@ -133,4 +180,17 @@ h2 {
     font-family: "karla";
     font-size: 15px;
     text-align: center;
+}
+
+h3 {
+	font-family: "oswald";
+	font-size: 20px;
+}
+
+.fa-inverse {
+    color: #fff;
+}
+
+.fa-stack-1x {
+    line-height: inherit;
 }
