--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
+
 body {
     background-color: #e4e8e6;
     font-family: "Karla", sans-serif;
     font-size: 16px;
-    max-width: 80%;
+    max-width: 100%;
     align-content: center;
     justify-content: center;
     padding: 0 10%;
@@ -61,7 +62,7 @@ a:hover {
 
 .navbar {
     grid-column: 2/3;
-    align-self: end;
+    align-self: center;
 }
 
 .navbar-pages {
@@ -75,7 +76,8 @@ a:hover {
 
 .pagebutt {
     margin: 0 0 0 50px;
-}
+    transform: translate(100px, 0);
+    }
 
 .portfolio-wrapper {
     display: grid;
@@ -95,6 +97,14 @@ a:hover {
 .resume-preview img {
     width: 70%;
 }
+
+.full-document {
+	padding-top: 30px;
+	text-align: center;
+	justify-content: center;
+}
+
+
 
 .about-me {
     grid-column: 1/4;
@@ -182,53 +192,6 @@ a:hover {
     z-index: 2;
 }
 
-.modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    padding-top: 100px;
-    /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.9);
-    /* Black w/ opacity */
-}
-
-.modal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-}
-
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-}
-
 
 h1 {
     font-family: "nothing you could do";
@@ -238,10 +201,29 @@ h1 {
     text-align: center;
 }
 
+.work-fullpage-desc {
+	align-items: center;
+	text-align:center;
+	padding-bottom: 50px;
+	
+}
+
 h2 {
-    font-family: "karla";
-    font-size: 15px;
+    font-family: "oswald";
+    font-size: 35px;
     text-align: center;
+    padding-bottom: 50px;
+        color: #69766c;
+}
+
+.full-desc {
+	font-family: "karla";
+	font-size: 18px;
+	padding-bottom: 20px;
+	text-align: center;
+    width: 65%;
+    margin: auto;
+    word-wrap: break-word;
 }
 
 h3 {
@@ -252,6 +234,7 @@ h3 {
 h4 {
     font-family: "karla";
     font-size: 20px;
+    text-align: center;
 }
 
 .fa-inverse {
@@ -260,4 +243,26 @@ h4 {
 
 .fa-stack-1x {
     line-height: inherit;
+}
+
+.full-landscape-xl {
+	max-width: 113%;
+	transform: translate(-7%, 0);
+	justfy-content: center;
+	text-align: center;
+	padding-bottom: 20px;
+}
+
+.full-landscape {
+	max-width: 100%;
+	justfy-content: center;
+	text-align: center;
+	padding-bottom: 20px;
+}
+
+.full-portrait {
+	max-width: 85%;
+	text-align; center;
+	justify-content: center;
+	padding-bottom: 20px;
 }
