--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #e4e8e6;
+    background-color: #e9ebee;
     font-family: "Karla", sans-serif;
     font-size: 16px;
     max-width: 100%;
@@ -205,7 +205,7 @@ h1 {
 	align-items: center;
 	text-align:center;
 	padding-bottom: 50px;
-	
+
 }
 
 h2 {
